# 2023_1_Echpochmaki

./: .gitignore  CMakeLists.txt  Game.cbp  Game.cpp  Game.h  README.md  main.cpp
Animation/: Animation.h  IAnimation.h
ECS/: AnimationComponent.h  BaseSystem.cpp  BaseSystem.h  CMakeLists.txt  ECS.h  EnemySystem.cpp  EnemySystem.h  EntityManager.h  EntityManager.hpp  HitBoxSystem.cpp  HitBoxSystem.h  MoveSystem.cpp  MoveSystem.h  PlayerSystem.cpp  PlayerSystem.h  PositionComponent.h  SpriteComponent.h  SyncSystem.cpp  SyncSystem.h  Tile.h
ECS/Components/: AnimationComponent.h  AnimationMovingComponent.h  AttackAnimationComponent.h  AttackComponent.h  CollisionComponent.h  EnemyComponent.h  FramesComponent.h  HealthComponent.h  MoveDirectionComponent.h  PlayerComponent.h  PositionComponent.h  SinkableComponent.h  SpriteComponent.h  TargetComponent.h  VelocityComponent.h
ECS/Systems/: CMakeLists.txt  EntityManager.cpp
ECS/Systems/inc/: AnimateDirectionSystem.h  AnimateMovingDirectionSystem.h  AttackAnimationSystem.h  AttackSystem.h  BaseSystem.h  CameraSystem.h  DrawSystem.h  EnemySystem.h  FramesSystem.h  HitBoxSystem.h  MoveSystem.h  PlayerSystem.h  RemoveEntitySystem.h  RenderInfoSystem.h  SyncSystem.h
ECS/Systems/src/: BaseSystem.cpp  EnemySystem.cpp  HitBoxSystem.cpp  MoveSystem.cpp  PlayerSystem.cpp  SyncSystem.cpp
ECS/Systems/tests/: CMakeLists.txt  SystemTests.cpp
ECS/Systems/tests/src/: SystemTests.cpp
ECS/inc/: ECS.h  EntityCreator.h  EntityManager.h  EntityManager.hpp  Tile.h
ECS/src/: EntityCreator.cpp  EntityManager.cpp
ECS/tests/: CMakeLists.txt  ecsTest.cpp  ecs_test.cpp
ECS/tests/src/: componentTest.cpp  entityManagerTest.cpp
ECS/utils/: FramesCreator.cpp  FramesCreator.h
Graphics/: CMakeLists.txt
Graphics/include/: animatable.h
Graphics/src/: main.cpp
MapGeneration/: CMakeLists.txt  IRoomGenerator.h  LevelManager.cpp
MapGeneration/inc/: BSPTree.h  IMapGenerator.h  IRoomGenerator.h  LevelManager.h
MapGeneration/src/: BSPTree.cpp  LevelManager.cpp
MapGeneration/tests/: CMakeLists.txt
MapGeneration/tests/src/: generation_test.cpp
Time/: Timer.cpp  Timer.h
assets/: Assets.cpp  Assets.h
events/: CMakeLists.txt  event.h  events.cpp
events/inc/: event.h  events.h
events/src/: events.cpp
map_generation/: IMapGenerator.h  IRoomGenerator.h  LevelManager.cpp  LevelManager.h
net/: CMakeLists.txt  Client.cpp  Client.hpp  Host.cpp  Host.hpp  IClient.hpp  Network.cpp  Network.hpp  Packets.hpp  packets.cpp
net/inc/: Client.hpp  Host.h  Host.hpp  IClient.h  IHost.h  IHost.hpp  Network.h  Network.hpp  Packets.h  client.h
net/src/: Client.cpp  Host.cpp  Network.cpp  Packets.cpp
net/tests/: CMakeLists.txt
net/tests/src/: test_network.cpp
